force-app/main/default/objects/Tax__c/fields/ClientType__c.field-meta.xml
<CustomField>
    <fullName>ClientType__c</fullName>
    <description>Select the type of the client</description>
    <inlineHelpText>Choose one client type on the list</inlineHelpText>
    <label>Client Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clients_Type</valueSetName>
    </valueSet>
</CustomField>