force-app/main/default/objects/Tax__c/fields/DestinationState__c.field-meta.xml
<CustomField>
    <fullName>DestinationState__c</fullName>
    <description>Wich state is the destination of the tax</description>
    <inlineHelpText>Choose a Destination state on the picklist</inlineHelpText>
    <label>Destination State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Destiny_State</valueSetName>
    </valueSet>
</CustomField>