force-app/main/default/objects/Tax__c/fields/ProductionCenter__c.field-meta.xml
<CustomField>
    <fullName>ProductionCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A Production_Center</description>
    <inlineHelpText>Choose a Production_Center</inlineHelpText>
    <label>Production Center</label>
    <referenceTo>ProductionCenter__c</referenceTo>
    <relationshipLabel>Taxes</relationshipLabel>
    <relationshipName>Taxes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>