force-app/main/default/objects/Tax__c/fields/StateOrigin__c.field-meta.xml
<CustomField>
    <fullName>StateOrigin__c</fullName>
    <description>Say wich state is the origin of the tax</description>
    <inlineHelpText>choose the origin state from the picklist</inlineHelpText>
    <label>State Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Origin_State</valueSetName>
    </valueSet>
</CustomField>