force-app/main/default/objects/Tax__c/fields/Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>how many percent is the tax</description>
    <inlineHelpText>write how many is the tax percentage</inlineHelpText>
    <label>Tax Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>