force-app/main/default/objects/Tax__c/fields/TaxOnCost__c.field-meta.xml
<CustomField>
    <fullName>TaxOnCost__c</fullName>
    <description>Percentage of the text cost</description>
    <inlineHelpText>Write a percentage</inlineHelpText>
    <label>Tax on cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>