force-app/main/default/objects/Tax__c/validationRules/Product_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Rule</fullName>
    <active>true</active>
    <description>Account cant be null</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Select a Product</errorMessage>
</ValidationRule>