force-app/main/default/objects/Tax__c/listViews/Distribuition_Taxes.listView-meta.xml
<ListView>
    <fullName>Distribuition_Taxes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ClientType__c</field>
        <operation>equals</operation>
        <value>distribution</value>
    </filters>
    <label>Distribuition Taxes</label>
</ListView>