force-app/main/default/objects/Tax__c/listViews/Geral.listView-meta.xml
<ListView>
    <fullName>Geral</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <columns>TaxOnCost__c</columns>
    <filterScope>Mine</filterScope>
    <label>Geral</label>
</ListView>