force-app/main/default/objects/Tax__c/listViews/Industry_Taxes.listView-meta.xml
<ListView>
    <fullName>Industry_Taxes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ClientType__c</field>
        <operation>equals</operation>
        <value>industry</value>
    </filters>
    <label>Industry Taxes</label>
</ListView>