force-app/main/default/objects/Tax__c/listViews/Retail_Taxes.listView-meta.xml
<ListView>
    <fullName>Retail_Taxes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ClientType__c</field>
        <operation>equals</operation>
        <value>retail</value>
    </filters>
    <label>Retail Taxes</label>
</ListView>