force-app/main/default/objects/Tax__c/listViews/ServiceTaxes.listView-meta.xml
<ListView>
    <fullName>ServiceTaxes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Service Taxes</label>
</ListView>