force-app/main/default/objects/Tax__c/listViews/Wholesale_Taxes.listView-meta.xml
<ListView>
    <fullName>Wholesale_Taxes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ClientType__c</field>
        <operation>equals</operation>
        <value>wholesale</value>
    </filters>
    <label>Wholesale Taxes</label>
</ListView>